# otmol

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  README.rst  environment.yml  find_edges_with_vertex.py  memory_usage_example.py  otmol_FGG.ipynb  otmol_S1.ipynb  otmol_WC.ipynb  otmol_alignment.ipynb  otmol_arbalignData.ipynb  otmol_arbalignWC.ipynb  otmol_arbalignWC_coordTran.ipynb  otmol_arbalignWC_new.ipynb  otmol_arbalignWCold.ipynb  otmol_cyclicPeptides.ipynb  requirements.txt  setup.cfg  setup.py
data/FGG-Tripeptide/: 252_FGG55.mna  252_FGG55.pdbqt  252_FGG55.sdf  (+87 more)
docs/: conf.py  index.rst  requirements.txt  tutorials.rst
experiment/: 10-PP1_10-PP2.html  ALPRAL10_2_CEJSUF.html  ArbAlign_cost_emd_expr.py  ArbAlign_expr.py  ArbAlign_expr_extrabio.py  ArbAlign_expr_memory_usage.py  ArbAlign_expr_no_reflection.py  RMSDvsBCI.ipynb  _.html  arbalign_extrabio_mismatch.ipynb  arbalign_mismatch.ipynb  experiment_utils.py  ira_mismatch.ipynb  memory_usage_comparison.ipynb  otmol_ArbAlignDataWC_memory_usage.csv  otmol_FGG.ipynb  otmol_FGG_fsGW_sOT.ipynb  otmol_FGG_geo.ipynb  otmol_S1MAW1.ipynb  otmol_S1MAW1_geo.ipynb  otmol_WC.ipynb  otmol_WC_O.ipynb  otmol_WC_sOT.ipynb  otmol_cyclic_peptides.ipynb  otmol_cyclic_peptides_geo.ipynb  otmol_expr_memory_usage.py  otmol_extrabio.ipynb  otmol_extrabio_old.ipynb  otmol_neonClusters.ipynb  otmol_neonClusters_sinkhorn.ipynb  otmol_neon_clusters.ipynb  otmol_neon_clusters_sinkhorn.ipynb  plot.ipynb  quick_start.ipynb  test.py
otmol/: __init__.py
otmol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tutorials/: quick_start.ipynb
(+4872 files in other folders)
