[metadata]
name = otmol
version = 0.0.1
description = Alignment and superposition of small molecules using optimal transport.
long_description_content_type = text/markdown
long_description = file: README.md
keywords = molecule alignment, superposition, optimal transport
license = MIT License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    numpy>=1.20.0
    scipy>=1.7.0
    matplotlib>=3.4.0
    pandas>=1.3.0
    pot>=0.9.5
    networkx>=3.1
    plotly>=5.15.0
    #openbabel==3.1.1
    importlib-metadata
python_requires = >=3.9

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
docs = 
    sphinx==5.3.0
    sphinx-autodoc-typehints==1.18.1
    sphinx-rtd-theme==1.0.0
    sphinx-rtd-size==0.2.0
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    sphinx-mdinclude==0.5.3
    nbsphinx==0.8.9
    ipykernel==6.16.0
    sphinx-gallery==0.11.1

[options.packages.find]
exclude =
    tests*
    docs*
    tutorials*